//IM群聊协议

syntax = "proto3";
// 生成的包名
option java_package = "generate";

//生成的java名
option java_outer_classname = "IMnettyChatProtocol";

// 统一请求消息体
message Message {
    enum MessageType {
        CHAT = 0; //聊天
        PING = 1; //客户端心跳
    }
    // 聊天使用的消息体对象
    message ChatInfo {
        // 聊天类型,目前支持单聊群聊
        enum ChatType {
            SINGLE = 0;
            GROUP = 1;
        }

        // 内容类型,目前支持普通文本聊天和带图片聊天
        enum ContentType {
            TEXT = 0;
            PIC = 1;
        }

        string from_ip = 1; // 用户ip
        ContentType content_type = 2; // 消息类型
        bytes content = 3; // 消息内容
        int64 timespace = 4; // 时间戳
        ChatType chat_type = 5; // 聊天类型
        repeated string to_ip = 6; // 目标用户ip
    }
    // 心跳
    message PingInfo {
        string userId = 1;
    }

    MessageType messageType = 1; //消息类型
    // 选择
    oneof data {
        ChatInfo chatInfo = 2;
        PingInfo pingInfo = 3;
    }
}